--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       text-overflow: ellipsis;
     }
     
+    #container a{
+      display:block;
+      text-decoration:none;
+    }
+    
     .highlight{
       -moz-box-shadow : 0px 0px 10px #000000;
       -webkit-box-shadow : 0px 0px 10px #000000;
