adding local copyof ebay api

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <script src="js/plugins.js?v=1"></script>
   <script src="js/script.js?v=1"></script>
   <script src="js/jquery.masonry.min.js"></script>
-  <script src="http://d-sjc-00523756.corp.ebay.com:8080/ebayapi/js/ebayapi.js"></script>
+  <script src="js/ebayapi.js"></script>
   <script src="js/ebayMasonry.js"></script>
   <!--[if lt IE 7 ]>
     <script src="js/dd_belatedpng.js?v=1"></script>
